[package]
name = "mempool-fee-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.30", features = ["derive"] }
hex = "0.4.3"
petgraph = "0.7.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
